Feature ETP-1273: Upgrade Gradle version to 8.12